[package]
name = "seaorm-pool"
version = "0.1.1"
description = "A Rust crate that creates a MySQL connection pool for SeaORM using a TOML configuration file."
license = "MIT"
repository = "https://github.com/RustLangLatam/tidb-pool"
documentation = "https://docs.rs/tidb_pool"
readme = "README.md"
keywords = ["SeaORM", "mysql", "pool", "connection", "sqlx"]
categories = ["database", "asynchronous", "network-programming"]
edition = "2024"
authors = ["Rust Latam <rust.lang.latam@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1.14", default-features = true, features = ["debug-print", "runtime-tokio-rustls", "sqlx-mysql"] }
tracing = "0.1"
humantime-serde = "1.1"
url = "2.5.4"

[dev-dependencies]
toml = "0.9.5" #